30: Added order service with domain and place order use case Refactor for product service extracting necessary types to common Refactor for immutable types creation validation